Added link to personal GitHub at bottom of page

--- a/index.html
+++ b/index.html
@@ -114,7 +114,9 @@
 						</div>
 					</div>
 				</div>
-				<p class="signature">Coded by Jenn Beeson</p>
+				<p class="signature">Coded by Jenn Beeson
+                    Check out my <a href="https://github.com/jennifuhrose">GitHub</a>
+                </p>
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
