--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 						</div>
 					</div>
 				</div>
-				<p class="signature">Coded by Jenn Beeson
+				<p class="signature">Coded by Jenn Beeson<br />
                     Check out my <a href="https://github.com/jennifuhrose">GitHub</a>
                 </p>
 
