Color scheme tweaks and small edit to the index.html
Changed colors on the overall page, made the destinations at the top of the card empty hyperlinks for placeholder

--- a/index.html
+++ b/index.html
@@ -27,16 +27,16 @@
         <div class="container">
           <div class="row">
             <div class="col">
-              Milwaukee
+              <a href="">Milwaukee</a>
 						</div>
 						<div class="col">
-              Chicago
+              <a href="">Chicago</a>
             </div>
             <div class="col">
-              St Louis
+              <a href="">St Louis</a>
             </div>
             <div class="col">
-              Denver
+              <a href="">Denver</a>
             </div>
             
 						<div class="col"></div>
@@ -115,7 +115,7 @@
 					</div>
 				</div>
 				<p class="signature">Coded by Jenn Beeson<br />
-                    Check out my <a href="https://github.com/jennifuhrose">GitHub</a>
+                    Check out my <a href="https://github.com/jennifuhrose" target="_blank">GitHub</a>
                 </p>
 
     <script
