Updated index.html to reflect CSS/JS changes from last commit

--- a/index.html
+++ b/index.html
@@ -27,16 +27,16 @@
         <div class="container">
           <div class="row">
             <div class="col">
-              <a href="">Milwaukee</a>
+              <a href="#" class="cities-top" id="milwaukee">Milwaukee</a>
 						</div>
 						<div class="col">
-              <a href="">Chicago</a>
+              <a href="#" class="cities-top" id="chicago">Chicago</a>
             </div>
             <div class="col">
-              <a href="">St Louis</a>
+              <a href="#" class="cities-top" id="st-louis">St Louis</a>
             </div>
             <div class="col">
-              <a href="">Denver</a>
+              <a href="#" class="cities-top" id="denver">Denver</a>
             </div>
             
 						<div class="col"></div>
