--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 										<span id="current-date"></span> <span id="current-time"></span>
 										<br /><span class="descriptor" id="main-weather-desc"></span></p>
 									<p class="card-text"><small class="text-muted">Humidity <span id="humidity"></span>%
-										<br /> Wind <span id="windspeed"></span> MPH</small></p>
+										<br /> Wind <span id="windspeed"></span> km/h</small></p>
 								</div>
 							</div>
 						</div>
@@ -114,8 +114,7 @@
 						</div>
 					</div>
 				</div>
-				<p class="signature">Coded by Jenn Beeson<br />
-                    Check out my <a href="https://github.com/jennifuhrose" target="_blank">GitHub</a>
+				<p class="signature"><a href="https://github.com/jennifuhrose/my-weather-project" target="_blank">Open-source code</a>, by Jenn Beeson
                 </p>
 
     <script
