Temp Unit Conversion now functional and styled

--- a/index.html
+++ b/index.html
@@ -58,7 +58,8 @@
 							<div class="col-md-7">
 								<div class="card-body">
 									<h5 class="card-title">
-										<span id="main-temp"></span>  <a href="#" id="fahrenheit">°F</a> | <a href="#" id="celsius">°C</a>
+										<span id="main-temp"></span>  <a href="#" id="fahrenheit" class="active">°F</a> | 
+										<a href="#" id="celsius" class="inactive">°C</a>
 										<i class="wi wi-thermometer therm"></i>
 									</h5>
 									<p class="card-text"><span id="current-city"></span>
