Connected the main weather icon to weather data in JS
Adjusted styles.css and index.html to accommodate JS changes. For Javascript, added new icon function, removed redundant code.

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 				</div>
 				<br />
 				<form id= "search-bar-form" action="">
-				<input class="search-bar" id="search-bar-proper" type="text" placeholder="Enter city here...">
+				<input class="search-bar" id="search-bar-proper" type="search" placeholder="Enter city here..." autocomplete="off">
 				<input type="submit" value="Search" class="btn btn-primary"> <button class="btn btn-primary" id="current-location"><i class="fa-solid fa-location-crosshairs"></i></button>
 			</form>
 				<br />
@@ -53,7 +53,7 @@
 				<div class="card mb-3" style="max-width: 540px;">
 						<div class="row g-0">
 							<div class="col-md-5">
-									<i class="wi wi-day-sunny main-icon"></i>
+								<i class="" id="big-icon"></i>
 							</div>
 							<div class="col-md-7">
 								<div class="card-body">
