Minor edit to index.html, made JS function for forecast icons work
In progress on making the temperature conversion work with the forecast.

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 										<span id="current-date"></span> <span id="current-time"></span>
 										<br /><span class="descriptor" id="main-weather-desc"></span></p>
 									<p class="card-text"><small class="text-muted">Humidity <span id="humidity"></span>%
-										<br /> Wind <span id="windspeed"></span> km/h</small></p>
+										<br /> Wind <span id="windspeed"></span> mph</small></p>
 								</div>
 							</div>
 						</div>
