Added an end div to index.html to fix small error

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 					<div class="container" id="forecast">
 						
 					</div>
-					
+				</div>
 				</div>
 				<p class="signature"><a href="https://github.com/jennifuhrose/my-weather-project" target="_blank">Open-source code</a>, by Jenn Beeson
                 </p>
